Crear clase que agrupa los botones de eleccion de unidades